--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_spinkit: ^5.1.0
   get: ^4.6.5
+  otp_text_field: ^1.1.3
 
 dev_dependencies:
   flutter_test:
