--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   get: ^4.6.5
   otp_text_field: ^1.1.3
+  percent_indicator: ^4.2.2
 
 dev_dependencies:
   flutter_test:
