--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,15 @@ dependencies:
   get: ^4.6.5
   otp_text_field: ^1.1.3
   percent_indicator: ^4.2.2
+  cloud_firestore: ^3.4.6
+  firebase_auth: ^3.7.0
+  firebase_core: ^1.21.1
+  flutter_easyloading: ^3.0.5
+  image_picker: ^0.8.5+3
+  firebase_storage: ^10.3.7
+  change_app_package_name: ^1.1.0
+
+  
 
 dev_dependencies:
   flutter_test:
