--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,12 +47,14 @@ dependencies:
   change_app_package_name: ^1.1.0
   uuid: ^3.0.6
   url_launcher: ^6.1.5
+  velocity_x: ^3.5.1
 
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
